# SMTPclient-with-GUI

./: CMakeLists.txt  Main.qml  README.txt  SmtpMime  main.cpp  smtpclient.cpp  smtpmanager.cpp  smtpmanager.h
